syntax = "proto3";

package micro.pure.helloworld;
//import "google/protobuf/empty.proto";
//protoc --proto_path=. --go_out=. --micro_out=. proto/hello_world.proto

service HelloWorld{
    rpc Echo(EchoRequest) returns (EchoResponse){
    }
//    rpc Print(google.protobuf.Empty) returns (PrintResponse){}
    rpc Print(PrintRequest) returns (PrintResponse){}
}

message EchoRequest{
    int64 id = 1;
    string userName = 2;
    string content = 3;
}

message EchoResponse{
    bool success = 1;
    Error error =2;
    user user =3;
}

message Error {
    int32 code = 1;
    string detail = 2;
}

message user{
    int64 id=1;
    string userName=2;
    string sayContent = 3;
}


message PrintRequest{
    int64 id = 1;
}
message PrintResponse{
    bool success=1;
    Error error=2;
    string printContent=3;
}